[gd_scene load_steps=6 format=3 uid="uid://dfrnp5hncwka"]

[ext_resource type="Script" path="res://scenes/objects/extendible.gd" id="1_5ampk"]
[ext_resource type="Texture2D" uid="uid://chpnwqa163woh" path="res://assets/graphics/objects/platform.png" id="2_j1f05"]
[ext_resource type="Shader" path="res://scenes/objects/resizable.gdshader" id="2_pewlg"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_evvr1"]
resource_local_to_scene = true
shader = ExtResource("2_pewlg")
shader_parameter/line_color = Color(0.415686, 0.745098, 0.188235, 1)
shader_parameter/width = 1.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ynbds"]
size = Vector2(96, 8)

[node name="Platform" type="StaticBody2D"]
collision_layer = 2
collision_mask = 7
input_pickable = true
script = ExtResource("1_5ampk")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_evvr1")
position = Vector2(0, 12)
texture = ExtResource("2_j1f05")

[node name="EditorSprite" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.494118)
position = Vector2(0, 12)
scale = Vector2(2, 1)
texture = ExtResource("2_j1f05")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ynbds")
one_way_collision = true

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
